<resources>
    <string name="app_name">Storage</string>
    <string name="hint_account_input">tài khoản</string>
    <string name="hint_password_input">mật khẩu</string>
    <string name="title_login">Đăng nhập</string>
    <string name="register_account"><u>Chưa có tài khoản? Đăng ký</u></string>
    <string name="title_register">Đăng ký</string>
    <string name="title_logout">Đăng xuất</string>
    <string name="hint_password_confirm_input">Xác nhận mật khẩu</string>
    <string name="hint_email_input">Email</string>
    <string name="hint_username_input">Họ tên</string>
    <string name="error_on_empty_input">Không được bỏ trống</string>
    <string name="error_on_username_length">Độ dài trong 1–255</string>
    <string name="error_on_account_length">Độ dài trong 6–255</string>
    <string name="error_on_password_length">Độ dài trong 6–255</string>
    <string name="error_on_confirm_alike">Mật khẩu không khớp</string>
    <string name="message_confirm_register_dialog">Mã xác nhận đã được gửi đến mail của bạn, vui lòng kiểm tra</string>
    <string name="message_session_out">Phiên đăng nhập hết hạn, vui lòng đăng nhập lại</string>
    <string name="text_button_confirm_code">Xác nhận</string>
    <string name="text_button_cancel_code">Hủy bỏ</string>
    <string name="message_register_success">Tạo tài khoản thành công</string>
    <string name="message_login_failed">Đăng nhập thất bại</string>
    <string name="text_item_last_modify_time">Truy cập lần cuối vào </string>
    <string name="function_item_share">Chia sẻ</string>
    <string name="function_item_add_favorite">Thêm vào yêu thích</string>
    <string name="function_item_remove_favorite">Xóa khỏi yêu thích</string>
    <string name="function_item_remove">Xóa</string>
    <string name="function_item_move">Di chuyển</string>
    <string name="function_item_rename">Đổi tên</string>
    <string name="title_dialog_change_name_file">Nhập tên mới</string>
    <string name="title_dialog_new_folder">Nhập tên thư mục</string>
    <string name="title_dialog_share_file">Chia sẻ 1 file: </string>
    <string name="empty_folder_string">Thư mục rỗng</string>
    <string name="upload_image_file">Upload 1 ảnh</string>
    <string name="upload_file">Upload 1 file</string>
    <string name="action_cancel_move">Hủy bỏ</string>
    <string name="message_share_file_success">Chia sẻ file thành công</string>
    <string name="message_no_permission">Bạn không có quyền để làm vậy</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="app_label">Store</string>
    <string name="title_search">Search</string>
    <string name="storage_used">Dung lượng đã dùng: %d / %d MB</string>
    <string name="forget_password"><u>Quên mật khẩu</u></string>
    <string name="confirm">Xác nhận</string>
</resources>