<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_filename_current"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/tv_share_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/function_item_share"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/icon_share_file" />

    <TextView
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/tv_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/function_item_add_favorite"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_favorite" />

    <TextView
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/tv_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/function_item_move"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_folder" />

    <TextView
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/tv_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/function_item_rename"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/icon_edit" />

    <TextView
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/function_item_remove"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/icon_remove_file" />

</LinearLayout>