<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/register_dialog_height"
    android:background="@drawable/background_login"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/message_confirm_register_dialog"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:textColor="@color/black"
        android:lines="@integer/line_of_edittext"
        android:layout_marginBottom="16dp"
        android:id="@+id/et_code_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/plain_edittext" />

    <LinearLayout
        android:gravity="center"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginEnd="16dp"
            android:id="@+id/bt_cancel_code"
            android:layout_width="@dimen/button_confirm_code"
            android:layout_height="wrap_content"
            android:background="@drawable/button_parent"
            android:text="@string/text_button_cancel_code"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_confirm_code"
            android:layout_width="@dimen/button_confirm_code"
            android:layout_height="wrap_content"
            android:background="@drawable/button_parent"
            android:text="@string/text_button_confirm_code"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>