<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <ImageView
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/iv_back"
        android:src="@drawable/baseline_arrow_back_24"/>

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.kma.drive.view.custom.CircularImageView
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_account_circle_24"
        android:id="@+id/iv_avatar_register"
        android:layout_width="@dimen/avatar_register_size"
        android:layout_height="@dimen/avatar_register_size"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bt_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar_register">

        <EditText
            android:inputType="text"
            android:id="@+id/et_username_register"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edditext_username"
            android:hint="@string/hint_username_input"
            android:ellipsize="end"
            android:maxLines="@integer/line_of_edittext"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:inputType="text"
            android:id="@+id/et_account_register"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_account"
            android:hint="@string/hint_account_input"
            android:ellipsize="end"
            android:maxLines="@integer/line_of_edittext"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_password"
            android:hint="@string/hint_password_input"
            android:inputType="textPassword"
            android:ellipsize="end"
            android:maxLines="@integer/line_of_edittext"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/et_password_register_confirm"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_password"
            android:hint="@string/hint_password_confirm_input"
            android:inputType="textPassword"
            android:ellipsize="end"
            android:maxLines="@integer/line_of_edittext"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/et_mail_register"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_mail"
            android:hint="@string/hint_email_input"
            android:inputType="textEmailAddress"
            android:ellipsize="end"
            android:maxLines="@integer/line_of_edittext"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_register"
        android:layout_width="@dimen/button_login"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_parent_effect"
        android:text="@string/title_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>